<resources>
    <string name="app_name">Assignment1</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="exit">Exit</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
    <string name="chatify">Chatify</string>
    <string name="gui_demo_l215757">GUI DEMO L215757</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_one">PAGE ONE</string>
    <string name="page_two">PAGE TWO</string>
    <string name="username">username</string>
    <string name="_3124">3124</string>
    <string name="_6408">6408</string>
    <string name="_564">564</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_name">Your name</string>
    <string name="bio_here">Bio here</string>
    <string name="bio_continues">bio continues</string>
    <string name="yourwebsite_com">yourwebsite.com</string>
    <string name="insta">INSTA</string>
</resources>