<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/darkgrey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chatify"
            android:textColor="@color/white"
            android:textSize="@dimen/_40sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/texticon"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="@dimen/_40dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="5">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightgrey"
            app:boxBackgroundMode="none"
            android:background="@drawable/edittext_bottom"
            android:hint="@string/first_name">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="@dimen/_50dp"
                android:id="@+id/name"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="none"
            android:textColorHint="@color/lightgrey"
            android:background="@drawable/edittext_bottom"
            android:layout_height="wrap_content"
            android:hint="@string/last_name">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="@dimen/_50dp"
                android:textColor="@color/white"
                android:id="@+id/lastname"
                android:inputType="text"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="none"
            android:background="@drawable/edittext_bottom"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightgrey"
            android:hint="@string/email_id">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="@dimen/_50dp"
                android:textColor="@color/white"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="none"
            android:background="@drawable/edittext_bottom"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightgrey"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="@dimen/_50dp"
                android:id="@+id/password"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="none"
            android:background="@drawable/edittext_bottom"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightgrey"
            android:hint="@string/retype_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="@dimen/_50dp"
                android:id="@+id/tvRePass"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
    
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginHorizontal="@dimen/_40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:textColor="@color/lightgrey"
                android:id="@+id/rbMale"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:layout_marginStart="@dimen/_60dp"
                android:textColor="@color/lightgrey"
                android:id="@+id/rbFemale"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/_20dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/btSignUp"
            android:backgroundTint="@color/yellow"
            android:layout_marginEnd="@dimen/_30dp"/>
        <Button
            android:id="@+id/btExit"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:backgroundTint="@color/yellow"/>

    </LinearLayout>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColor="@color/lightgrey"
        android:layout_marginVertical="@dimen/_30dp"
        android:text="@string/already_have_an_account_login_now"/>
</LinearLayout>