<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="30sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/username"
            android:layout_centerInParent="true"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/settingsicon" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingHorizontal="10dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="9dp"
            android:visibility="visible"
            app:cardCornerRadius="290dp">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/dogpfp2"/>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:layout_marginTop="9dp"

            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_3124"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_6408"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_564"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

            <TextView
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/posts"
                android:textSize="15sp" />

                <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="15sp"/>

                 <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="15sp"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/lightgrey"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="10dp" >
        <TextView
            android:layout_width="match_parent"
            android:text="@string/your_name"
            android:textSize="20sp"
            android:id="@+id/firsttext"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/bio_here"
            android:id="@+id/secondtext"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/firsttext"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/bio_continues"
            android:textSize="20sp"
            android:id="@+id/thirdtext"
            android:layout_below="@id/secondtext"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@id/thirdtext"
            android:layout_width="match_parent"
            android:text="@string/yourwebsite_com"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:paddingVertical="20dp"
            android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/gridicon"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/listicon"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:src="@drawable/location"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:src="@drawable/usertagged"/>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:rowCount="2"
        android:paddingHorizontal="10dp"
        android:columnCount="3"
        >
        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/post1"
            android:layout_height="130dp"
            android:layout_width="130dp"/>

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/post2"
            android:layout_height="130dp"
            android:layout_width="130dp"/>

        <ImageView
            android:src="@drawable/post3"
            android:scaleType="centerCrop"
            android:layout_height="130dp"
            android:layout_width="130dp"
            />

        <ImageView
            android:scaleType="centerCrop"
            android:layout_height="130dp"
            android:layout_width="130dp"
            android:src="@drawable/post4"/>

        <ImageView
            android:scaleType="centerCrop"
            android:layout_height="130dp"
            android:layout_width="130dp"
            android:src="@drawable/post5"/>

        <ImageView
            android:scaleType="centerCrop"
            android:layout_height="130dp"
            android:layout_width="130dp"
            android:src="@drawable/post6"/>
    </GridLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line"
            android:background="@color/lightgrey"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/home"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/search"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/camera"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/heart"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/user"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>