<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/threetabs"
    android:gravity="start"
    android:layout_height="match_parent"
    tools:context=".ThreeTabs">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal"
    android:orientation="horizontal">
   <ImageView
       android:layout_margin="@dimen/_10dp"
       android:layout_width="wrap_content"
       android:layout_height="@dimen/_40dp"
       android:id="@+id/ivBack"
       android:layout_gravity="center_vertical"
       android:src="@drawable/backicon"/>
    <TextView
        android:layout_margin="@dimen/_10dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40dp"
        android:textSize="@dimen/_20sp"
        android:paddingTop="@dimen/_5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/gui_demo_l215757"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/teal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llone"
            android:padding="@dimen/_20dp"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:src="@drawable/hearticon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35dp"
                android:text="@string/one"
                android:textSize="@dimen/_17sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lltwo"
            android:padding="@dimen/_20dp"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:src="@drawable/callicon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35dp"
                android:text="@string/two"
                android:textSize="@dimen/_17sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
        android:id="@+id/llthree"
        android:padding="@dimen/_20dp"
        android:layout_width="@dimen/_0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:src="@drawable/person"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35dp"
            android:text="@string/insta"
            android:textSize="@dimen/_17sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>


    </LinearLayout>
    </LinearLayout>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:id="@+id/pageone"
        android:name="com.example.assignment1.pageone"
        android:layout_weight="1"
        tools:layout="@layout/fragment_pageone"/>

</LinearLayout>